Add rename popup for extract to const code action